tests/integration/snapshots/integration__store_command_tests__basic_store_to_directory_normalized.snap
---
source: tests/integration/store_command_tests.rs
expression: normalized
---
[
  {
    "content": {
      "headers": {},
      "key": "key-0",
      "offset": 0,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_00",
          "field2": 0,
          "field3": true
        },
        "id": 0,
        "name": "Test Message 0",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/0.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-1",
      "offset": 1,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_01",
          "field2": 1,
          "field3": false
        },
        "id": 1,
        "name": "Test Message 1",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/1.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-2",
      "offset": 2,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_02",
          "field2": 2,
          "field3": true
        },
        "id": 2,
        "name": "Test Message 2",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/2.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-3",
      "offset": 3,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_03",
          "field2": 3,
          "field3": false
        },
        "id": 3,
        "name": "Test Message 3",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/3.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-4",
      "offset": 4,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_04",
          "field2": 4,
          "field3": true
        },
        "id": 4,
        "name": "Test Message 4",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/4.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-5",
      "offset": 5,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_05",
          "field2": 0,
          "field3": false
        },
        "id": 5,
        "name": "Test Message 5",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/5.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-6",
      "offset": 6,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_06",
          "field2": 1,
          "field3": true
        },
        "id": 6,
        "name": "Test Message 6",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/6.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-7",
      "offset": 7,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_07",
          "field2": 2,
          "field3": false
        },
        "id": 7,
        "name": "Test Message 7",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/7.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-8",
      "offset": 8,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_08",
          "field2": 3,
          "field3": true
        },
        "id": 8,
        "name": "Test Message 8",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/8.json"
  },
  {
    "content": {
      "headers": {},
      "key": "key-9",
      "offset": 9,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-basic-store",
      "value": {
        "data": {
          "field1": "field1_09",
          "field2": 4,
          "field3": false
        },
        "id": 9,
        "name": "Test Message 9",
        "timestamp": 1700000000000
      }
    },
    "path": "test-basic-store/partition-0/9.json"
  }
]
