tests/integration/snapshots/integration__store_command_tests__store_with_header_filter_to_directory_normalized.snap
---
source: tests/integration/store_command_tests.rs
expression: normalized
---
[
  {
    "content": {
      "headers": {
        "region": "us"
      },
      "key": "key-0",
      "offset": 0,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-header-filter",
      "value": {
        "data": 0,
        "id": 0,
        "region": "us"
      }
    },
    "path": "test-header-filter/partition-0/0.json"
  },
  {
    "content": {
      "headers": {
        "region": "us"
      },
      "key": "key-1",
      "offset": 1,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-header-filter",
      "value": {
        "data": 11,
        "id": 1,
        "region": "us"
      }
    },
    "path": "test-header-filter/partition-0/1.json"
  },
  {
    "content": {
      "headers": {
        "region": "us"
      },
      "key": "key-2",
      "offset": 2,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-header-filter",
      "value": {
        "data": 22,
        "id": 2,
        "region": "us"
      }
    },
    "path": "test-header-filter/partition-0/2.json"
  },
  {
    "content": {
      "headers": {
        "region": "us"
      },
      "key": "key-3",
      "offset": 3,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-header-filter",
      "value": {
        "data": 33,
        "id": 3,
        "region": "us"
      }
    },
    "path": "test-header-filter/partition-0/3.json"
  },
  {
    "content": {
      "headers": {
        "region": "us"
      },
      "key": "key-4",
      "offset": 4,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-header-filter",
      "value": {
        "data": 44,
        "id": 4,
        "region": "us"
      }
    },
    "path": "test-header-filter/partition-0/4.json"
  }
]
