tests/integration/snapshots/integration__store_command_tests__store_with_key_regex_filter_to_directory_normalized.snap
---
source: tests/integration/store_command_tests.rs
expression: normalized
---
[
  {
    "content": {
      "headers": {},
      "key": "user-0",
      "offset": 0,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-key-regex",
      "value": {
        "id": 0,
        "name": "User 0",
        "type": "user"
      }
    },
    "path": "test-key-regex/partition-0/0.json"
  },
  {
    "content": {
      "headers": {},
      "key": "user-1",
      "offset": 1,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-key-regex",
      "value": {
        "id": 1,
        "name": "User 1",
        "type": "user"
      }
    },
    "path": "test-key-regex/partition-0/1.json"
  },
  {
    "content": {
      "headers": {},
      "key": "user-2",
      "offset": 2,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-key-regex",
      "value": {
        "id": 2,
        "name": "User 2",
        "type": "user"
      }
    },
    "path": "test-key-regex/partition-0/2.json"
  },
  {
    "content": {
      "headers": {},
      "key": "user-3",
      "offset": 3,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-key-regex",
      "value": {
        "id": 3,
        "name": "User 3",
        "type": "user"
      }
    },
    "path": "test-key-regex/partition-0/3.json"
  },
  {
    "content": {
      "headers": {},
      "key": "user-4",
      "offset": 4,
      "partition": 0,
      "timestamp": 1700000000000,
      "topic": "test-key-regex",
      "value": {
        "id": 4,
        "name": "User 4",
        "type": "user"
      }
    },
    "path": "test-key-regex/partition-0/4.json"
  }
]
